--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 
+
 header{
     width: 100%;
     height: 100%;
@@ -11,8 +12,15 @@ footer{
     width: 100%;
 }
 
+
+
 .paginas{
-    margin-right: 10px;
+    background: #000;
+    z-index: 10000;
 }
+
+
+
+
 
 
