Adcionando novas paginas / Privacidade / Termos / Quem Somos / Termo de Troca

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,13 @@ footer{
     z-index: 10000;
 }
 
+p.trucate-3l{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 
 
